# cortexdj

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.yml
.agents/skills/autoresearch/: SKILL.md
.agents/skills/code-review-guide/: SKILL.md
.agents/skills/codebase-visualizer/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/grilling/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/setup-matt-pocock-skills/: SKILL.md  issue-tracker-github.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  product-advisor.md  vercel-chatbot-template.md
.claude/hooks/: block-generated-edits.py
.claude/rules/: conventions.md
.codex/: hooks.json
.codex/agents/: code-reviewer.toml  product-advisor.toml  vercel-chatbot-template.toml
.codex/hooks/: backend-ruff.py
.github/workflows/: ci.yml  create-deps-pr.yml  eval.yml
.understand-anything/: .gitignore  .understandignore  fingerprints.json  knowledge-graph.json  meta.json
backend/: .cache  .dockerignore  .modalignore  Dockerfile  pyproject.toml
backend/autoresearch/: README.md  prepare.py  program.md  train.py
backend/data/: DEAP_SETUP.md  deap_stimuli.json  track_index_miss_log.jsonl
backend/scripts/: create-db-revision-docker.sh  create-test-db.sh  downgrade-db-revision-docker.sh  download-checkpoints.sh  migrate-docker.sh  modal_autoresearch.py  modal_train.py  probe_audio_catalog.py  run_autoresearch.py  run_hosted.sh  run_local.sh
backend/src/cortexdj/: alembic.ini  app.py
backend/src/cortexdj/agents/: brain_agent.py  deps.py  history_processor.py  hooks.py
backend/src/cortexdj/agents/capabilities/: classification.py  insight.py  playlist.py  retrieval.py  session.py
backend/src/cortexdj/agents/tools/: classification_tools.py  insight_tools.py  playlist_tools.py  retrieval_tools.py  session_tools.py
backend/src/cortexdj/core/: config.py  paths.py
backend/src/cortexdj/dependencies/: db.py  eeg_model.py
backend/src/cortexdj/migrations/: env.py
backend/src/cortexdj/migrations/versions/: 36df67a68339_add_spotify_tokens_table.py  77c744e4b096_add_pgvector_extension_and_track_audio_.py  b37bb7cb8d13_initial_schema.py
backend/src/cortexdj/ml/: contrastive.py  contrastive_dataset.py  contrastive_train.py  dataset.py  metrics.py  model.py  predict.py  preprocessing.py  pretrained.py  train.py
backend/src/cortexdj/models/: __init__.py  eeg_segment.py  message.py  playlist.py  session.py  session_track.py  spotify_token.py  thread.py  track.py  track_audio_embedding.py
backend/src/cortexdj/routers/: __init__.py  agent.py  audio.py  health.py  main.py  retrieval.py  sessions.py  spotify_auth.py  thread.py
backend/src/cortexdj/schemas/: eeg_segment.py  playlist.py  retrieval.py  session.py  spotify.py  thread.py  track.py
backend/src/cortexdj/scripts/: build_track_index.py  fetch_deap_audio.py  generate_synthetic.py  seed_sessions.py
backend/src/cortexdj/services/: audio_catalog.py  eeg_processing.py  retrieval.py  session.py  spotify.py  thread.py  title_generator.py  trajectory.py
backend/src/cortexdj/utils/: emotion.py  logging.py  message_serialization.py
backend/tests/: conftest.py  factories.py  fakes.py  test_audio_catalog.py  test_brain_agent_hooks.py  test_build_track_index.py  test_contrastive.py  test_contrastive_dataset_paths.py  test_dataset.py  test_deap_dataset.py  test_majority_baseline.py  test_metrics.py  test_preprocessing.py  test_pretrained.py  test_resume_state.py  test_retrieval_service.py  test_retrieval_tool.py  test_train_smoke.py  test_trajectory.py
backend/tests/evals/: conftest.py  test_brain_agent_evals.py  test_prepare_tools.py
backend/tests/integration/: conftest.py  test_health.py  test_migrations.py
backend/tests/integration/models/: test_models_crud.py
backend/tests/integration/routers/: test_retrieval_api.py  test_sessions_api.py  test_thread_api.py
backend/tests/unit/agents/: test_brain_agent_hooks.py  test_prepare_tools.py  test_retrieval_tool.py
backend/tests/unit/ml/: test_contrastive.py  test_deap_dataset.py  test_majority_baseline.py  test_metrics.py  test_pretrained.py  test_resume_state.py
backend/tests/unit/scripts/: test_build_track_index.py
backend/tests/unit/services/: test_audio_catalog.py  test_retrieval_service.py  test_title_generator.py  test_trajectory.py
backend/tests/unit/utils/: test_emotion.py  test_message_serialization.py
docs/: DEMO_WORKFLOWS.md  HANDOFF.md  ROADMAP.md  datasets-analysis.md  demo-prompts.md  feature-brainstorm.md  modal-llms-full.txt  pretrained-models-analysis.md  pydantic-ai-llms-full.txt  vercel-ai-sdk-ui.txt
docs/adr/: 0001-hnsw-over-ivfflat.md  0002-itunes-previews-over-spotify-preview-url.md  0003-two-layer-tool-error-convention.md  0004-subject-median-label-binarization.md
docs/assets/: README.md
docs/interview/: cortexdj-project.md  cortexdj-v1.md  cortexdj-v2.md  cortexdj-v3.md
frontend/: .env.example  .pnpmfile.cjs  biome.jsonc  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/api/: client.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: app-sidebar.tsx  brain-context-badge.tsx  chat-header.tsx  chat.tsx  emotion-trajectory.tsx  greeting.tsx  message.tsx  messages.tsx  multimodal-input.tsx  retrieved-tracks-panel.tsx  session-list-panel.tsx  session-visualization.tsx  sidebar-history-item.tsx  sidebar-user-nav.tsx
frontend/features/: tool-panel-registry.ts
frontend/lib/: constants.ts  extract-session-id.ts  types.ts
(+48 files in other folders)
