[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortexdj"
version = "0.1.0"
description = "AI-powered EEG brain-wave classifier and Spotify playlist curator"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "braindecode>=1.4.0",
  "safetensors>=0.7.0",
  "fastapi[standard]>=0.135.3",
  "mne>=1.12.0",
  "modal>=1.4.1",
  "numpy>=2.4.4",
  "psycopg[binary,pool]>=3.3.3",
  "pydantic-ai>=1.80.0",
  "pydantic>=2.12.5",
  "scipy>=1.17.1",
  "spotipy>=2.26.0",
  "sqlalchemy[asyncio,mypy]>=2.0.49",
  "torch>=2.11.0",
  "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pre-commit>=4.5.1",
  "pydantic-evals>=1.80.0",
  "pytest>=9.0.3",
  "ruff>=0.15.10",
]

[tool.pytest.ini_options]
markers = [
    "main: marks tests for main demo examples",
    "additional: marks tests for additional demo examples",
    "eval: marks tests that call a real LLM (opt-in; run with `pytest -m eval`)",
]
addopts = "-m 'not eval'"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["mne.*", "braindecode.*", "spotipy.*", "scipy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[project.scripts]
seed-sessions = "cortexdj.scripts.seed_sessions:main"
train-model = "cortexdj.ml.train:main"
compare-models = "cortexdj.ml.train:compare_main"

[tool.uv]
default-groups = ["dev"]
