[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortexdj"
version = "0.1.0"
description = "AI-powered EEG brain-wave classifier and Spotify playlist curator"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "braindecode>=1.4.0",
  "safetensors>=0.7.0",
  "fastapi[standard]>=0.136.1",
  "httpx>=0.28.1",
  "librosa>=0.11.0",
  "mne>=1.12.1",
  "modal>=1.4.2",
  "numpy>=2.4.4",
  "pgvector>=0.4.2",
  "psycopg[binary,pool]>=3.3.3",
  "pydantic-ai>=1.87.0",
  "pydantic>=2.13.3",
  "scipy>=1.17.1",
  "spotipy>=2.26.0",
  "sqlalchemy[asyncio,mypy]>=2.0.49",
  "tensorboard>=2.20.0",
  "torch>=2.11.0",
  "transformers>=5.6.2",
  "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pre-commit>=4.6.0",
  "pydantic-evals>=1.87.0",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
]

[tool.pytest.ini_options]
markers = [
    "main: marks tests for main demo examples",
    "additional: marks tests for additional demo examples",
    "eval: marks tests that call a real LLM (opt-in; run with `pytest -m eval`)",
]
addopts = "-m 'not eval'"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["mne.*", "braindecode.*", "spotipy.*", "scipy.*", "librosa.*", "transformers.*", "pgvector.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[project.scripts]
fetch-deap-audio = "cortexdj.scripts.fetch_deap_audio:main"
seed-sessions = "cortexdj.scripts.seed_sessions:main"
seed-track-index = "cortexdj.scripts.build_track_index:main"
train-model = "cortexdj.ml.train:main"
train-contrastive = "cortexdj.ml.contrastive_train:main"
compare-models = "cortexdj.ml.train:compare_main"

[tool.uv]
default-groups = ["dev"]
