[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortexdj"
version = "0.1.0"
description = "AI-powered EEG brain-wave classifier and Spotify playlist curator"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18.5",
  "asyncpg>=0.31.0",
  "braindecode>=1.6.1",
  "safetensors>=0.8.0",
  "fastapi[standard]>=0.139.2",
  "httpx>=0.28.1",
  "librosa>=0.11.0",
  "mne>=1.12.1",
  "modal>=1.5.2",
  "numpy>=2.4.6",
  "pgvector>=0.5.0",
  "psycopg[binary,pool]>=3.3.4",
  "pydantic-ai>=2.11.0",
  "pydantic>=2.13.4",
  "scipy>=1.18.0",
  "spotipy>=2.26.0",
  "sqlalchemy[asyncio,mypy]>=2.0.51",
  "tensorboard>=2.21.0",
  "torch>=2.13.0",
  "transformers>=5.14.1",
  "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
  "anyio>=4.14.2",
  "mypy>=2.3.0",
  "pre-commit>=4.6.0",
  "pydantic-evals>=2.11.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-DB/HTTP tests; needs Postgres (CI service or `docker compose up -d postgres`)",
    "eval: marks tests that call a real LLM (opt-in; run with `pytest -m eval`)",
]
# Default run = the fast, DB-free unit tier; `integration` and `eval` are
# opt-in via -m. Test dirs are packages (an __init__.py each) so the same
# basename can recur across tiers.
addopts = "-m 'not eval and not integration'"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["mne.*", "braindecode.*", "spotipy.*", "scipy.*", "librosa.*", "transformers.*", "pgvector.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[project.scripts]
fetch-deap-audio = "cortexdj.scripts.fetch_deap_audio:main"
seed-sessions = "cortexdj.scripts.seed_sessions:main"
seed-track-index = "cortexdj.scripts.build_track_index:main"
train-model = "cortexdj.ml.train:main"
train-contrastive = "cortexdj.ml.contrastive_train:main"
compare-models = "cortexdj.ml.train:compare_main"

[tool.uv]
default-groups = ["dev"]
